# eventkit

./: .gitignore  LICENSE  README.rst  pyproject.toml  setup.py
.github/workflows/: ci-test.yaml  publish.yaml
eventkit/: __init__.py  event.py  types.py  util.py  version.py
eventkit/ops/: aggregate.py  array.py  combine.py  create.py  misc.py  op.py  select.py  timing.py  transform.py
tests/: aggregate_test.py  combine_test.py  create_test.py  event_test.py  select_test.py  timing_test.py  transform_test.py
