[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eventkit"
dynamic = ["version"]
description = "Event-driven data pipelines"
readme = "README.rst"
license = "BSD-3-Clause"
authors = [{name = "Ewald R. de Wit (original creator)"}]
maintainers = [{name = "Steffen M Natter", email = "stnatter@gmail.com"}]
requires-python = ">=3.14"
dependencies = ["numpy>=2.3.0"]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "mypy", "ruff"]
test = ["pytest", "pytest-asyncio"]

[project.urls]
Repository = "https://github.com/stnatter/eventkit"

[tool.setuptools.dynamic]
version = {attr = "eventkit.version.__version__"}

[tool.setuptools.packages.find]
include = ["eventkit*"]
exclude = ["tests*", "docs*", "notebooks*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
exclude = ["tests/", "build/"]
disable_error_code = ["annotation-unchecked"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008", "C901", "E402"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
